# snowforecast

./: .gitignore  Product Requirements Document_ Mountain Snowfall Prediction Model.md  README.md  claude.md  e2e_results.json  e2e_test_content.py  package-lock.json  package.json  packages.txt  pyproject.toml  requirements-lock.txt  requirements.txt  streamlit_app.py  test_all_resorts.py  test_path_fix.js  test_streamlit.js  test_streamlit2.js  test_streamlit3.js  test_streamlit4.js  test_streamlit_version.js  test_time_selector.py
.claude/: handoff.md  ux_design_plan.md
.claude/commands/: merge-phase1.md  spawn-phase1.md  spawn-phase6.md  status.md
.claude/prompts/: 00-state-contract.md  35-resort-map.md  36-detail-panel.md  37-favorites.md  38-terrain-3d.md  39-elevation-bands.md  48-color-scale.md  phase2-temporal.md  phase2-terrain.md  pipeline-dem.md  pipeline-era5.md  pipeline-ghcn.md  pipeline-hrrr.md  pipeline-openskimap.md  pipeline-snotel.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: pipeline.yml
.github/workflows/: cache-refresh.yml  ci.yml  daily-refresh.yml  test-pipelines.yml
.streamlit/: config.toml
docs/: AGENT_QUICKREF.md  FINAL_REPORT.md  MODEL_CARD.md  PRD_DATA_CACHING.md  PRD_Dashboard_V2.md  TRAINING_GUIDE.md  WORKTREE_STRATEGY.md
playwright-test/: test_debug_final.py  test_debug_section.py
research/: capture_opensnow.py  current_cost_audit.md  free_elevation_data.md  free_mapping_sources.md  free_snow_observation_data.md  free_weather_apis.md  mapping_libraries.md  mountain-forecast_analysis.md  noaa_additional_capture.py  noaa_analysis.md  noaa_screenshot_capture.py  opensnow_analysis.md  ski_apps_analysis.md  ski_research_playwright.py  ski_research_round2.py  windy_analysis.md  windy_research.py  windy_research_v2.py
research/screenshots/mountain-forecast/: capture_screenshots.py  page_structure.html  visible_text.txt
research/screenshots/opensnow/: findings.json
research/screenshots/windy/: page_structure.html
scripts/: check_status.sh  cleanup_worktrees.sh  daily_refresh.py  debug_alta_forecast.py  setup_worktrees.sh  train.py  validate_terrain_tiles.py
src/snowforecast/: __init__.py
src/snowforecast/api/: __init__.py  app.py  predictor.py  schemas.py
src/snowforecast/cache/: __init__.py  database.py  elevation_bands.py  hrrr.py  models.py  predictor.py  refresh.py  terrain.py
src/snowforecast/dashboard/: __init__.py  app.py
src/snowforecast/dashboard/components/: __init__.py  cache_status.py  confidence.py  elevation_bands.py  favorites.py  forecast_overlay.py  loading.py  map_view.py  performance.py  resort_detail.py  responsive.py  snotel_display.py  snow_quality.py  terrain_layer.py  time_selector.py
src/snowforecast/evaluation/: __init__.py  evaluation.py
src/snowforecast/features/: __init__.py  atmospheric.py  lagged.py  orchestration.py  quality.py  spatial.py  temporal.py  temporal_features.py  terrain.py
src/snowforecast/models/: __init__.py  base.py  comparison.py  cross_validation.py  ensemble.py  gradient_boosting.py  linear.py  lstm.py  metrics.py  tuning.py  unet.py
src/snowforecast/pipelines/: __init__.py  dem.py  era5.py  ghcn.py  hrrr.py  openskimap.py  snotel.py
src/snowforecast/utils/: __init__.py  base.py  geo.py  io.py
src/snowforecast/visualization/: __init__.py  colors.py
templates/: conftest.py.template  pyproject.toml.template  utils_geo.py.template  utils_io.py.template
tests/: conftest.py  performance_test.js
tests/api/: __init__.py  test_app.py
tests/cache/: test_database.py  test_elevation_bands.py  test_hrrr.py  test_predictor.py  test_refresh.py  test_terrain.py
tests/dashboard/: __init__.py  test_confidence.py  test_favorites.py  test_forecast_overlay.py  test_loading.py  test_map_view.py  test_performance.py  test_resort_detail.py  test_responsive.py  test_snotel_display.py  test_snow_quality.py  test_terrain_layer.py  test_time_selector.py
tests/e2e/: .gitignore  CLOUD_DEPLOYMENT_REPORT.md  TEST3_MAP_RENDERING_REPORT.md  test_cloud_deployment.py  test_cloud_deployment_v2.py  test_cloud_final.py  test_cloud_visual.py  test_dashboard.py  test_forecast_charts.py  test_full_features.py  test_local_features.py  test_map_rendering.py  test_map_rendering_v2.py  test_map_visualization.py
tests/evaluation/: __init__.py  test_evaluation.py
tests/features/: __init__.py  test_atmospheric.py  test_lagged.py  test_orchestration.py  test_quality.py  test_spatial.py  test_temporal.py  test_temporal_features.py  test_terrain.py
tests/live/: __init__.py  test_pipelines_smoke.py
tests/models/: __init__.py  test_base.py  test_comparison.py  test_cross_validation.py  test_ensemble.py  test_gradient_boosting.py  test_linear.py  test_lstm.py  test_metrics.py  test_tuning.py  test_unet.py
tests/pipelines/: __init__.py  test_dem.py  test_era5.py  test_ghcn.py  test_hrrr.py  test_openskimap.py  test_snotel.py
tests/utils/: __init__.py  test_base.py  test_geo.py  test_io.py
tests/visualization/: test_colors.py
