[project]
name = "snowforecast"
version = "0.1.0"
description = "ML model for predicting mountain snowfall and snow depth"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

# Core dependencies - managed by coordinator
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "xarray>=2023.1.0",
    "pyarrow>=14.0.0",  # For parquet support
]

[project.optional-dependencies]
# Each pipeline has its own optional deps
# Agents: only modify YOUR section

snotel = [
    "metloom>=0.3.0",
]

ghcn = [
    "requests>=2.28.0",
]

era5 = [
    "cdsapi>=0.6.0",
    "netcdf4>=1.6.0",
]

hrrr = [
    "herbie-data>=2024.1.0",
    "cfgrib>=0.9.10",
]

dem = [
    "rasterio>=1.3.0",
    "rioxarray>=0.14.0",
    "scipy>=1.10.0",
]

openskimap = [
    "geojson>=3.0.0",
    "shapely>=2.0.0",
    "requests>=2.28.0",
]

# ML models (gradient boosting)
models = [
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
]

# Deep learning models (U-Net, etc.)
deeplearning = [
    "torch>=2.0.0",
]

# API dependencies
api = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",  # For testing
]

# Dashboard dependencies
dashboard = [
    "streamlit>=1.30.0",
    "pydeck>=0.9.0",  # Maps and 3D terrain visualization
    "streamlit-folium>=0.15.0",
    "streamlit-local-storage>=0.0.25",
    "branca>=0.6.0",  # Color scales for Folium
]

# Cache dependencies
cache = [
    "duckdb>=0.9.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-playwright>=0.4.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# All pipelines combined
all = [
    "snowforecast[snotel,ghcn,era5,hrrr,dem,openskimap,models,deeplearning,api,dashboard,cache,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snowforecast"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "unit: fast unit tests using fixtures (no network)",
    "integration: tests with recorded API responses (VCR cassettes)",
    "live: real API tests - slow, requires network and credentials",
    "slow: slow tests that may timeout in CI",
    "e2e: end-to-end Playwright tests against live deployment",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "N802",  # Allow non-lowercase function names (test methods)
    "N803",  # Allow uppercase X, y params for ML convention
    "N806",  # Allow uppercase X, y vars for ML convention
    "N812",  # Allow torch.nn.functional as F (PyTorch convention)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # Allow longer lines in tests
"src/snowforecast/models/__init__.py" = ["F401"]  # Dynamic re-exports
"src/snowforecast/models/tuning.py" = ["F401"]  # Optional imports

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
